Give me a shout

--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
           </ul>
     </div>
 
-  <p class="ipad displaynone" style="color: gray; font-family: 'Lato', serif; font-size: 22pt; font-weight: normal; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 5%; margin-bottom:1%; text-align: center;">
+<!--   <p class="ipad displaynone" style="color: gray; font-family: 'Lato', serif; font-size: 22pt; font-weight: normal; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 5%; margin-bottom:1%; text-align: center;">
     <a href="https://edwinau.github.io/edwin-landing/portfolio.html" style="color: #666666; text-decoration: none;" target="_blank">
       Welcome to my page
     </a>
   </p>
 
-  <p class="imac displaynone" style="color: gray; font-family: 'Lato', serif; font-size: 16pt; font-weight: normal; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 30%; margin-bottom:1%; text-align: center;">
+ <p class="imac displaynone" style="color: gray; font-family: 'Lato', serif; font-size: 16pt; font-weight: normal; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 30%; margin-bottom:1%; text-align: center;">
     <a href="https://edwinau.github.io/edwin-landing/portfolio.html" style="color: #666666; text-decoration: none;" target="_blank">
       Welcome to my page
     </a>
-  </p>
+  </p> -->
 
     <div class="container_one intro" id="backtotop">
 
