--- a/portfolio.html
+++ b/portfolio.html
@@ -45,13 +45,16 @@
           </ul>
       </div>
     </td>
-    <td style="width: 700px; vertical-align: top; align">
-      <p class="resume-prompt"><span style="color: #666666; font-size: 13pt; line-height: 1.25;">
+    <td style="width: 700px; vertical-align: top;">
+      <p class="resume-prompt"><span style="color: #666666; font-size: 13pt; line-height: .9;">
         <a href="https://edwinau.github.io/edwin-landing/index.html" style="color: black; text-decoration: none;" target="_blank">
           Welcome to my portfolio page
         </a>
-      </span><br>For further info, feel free to <a href="mailto:edwinfcau@gmail.com">
-      <span style="text-decoration: underline; color: blue;">contact&nbsp;me</span></a>.</p>
+      </span><br><br>
+        If a picture is worth more than a thousand words, then an amazing 'product experience' is worth a million!  It should leave the user feeling content and satisfied.</br>
+        Thanks for visiting to page - feel free to come back anytime.<br>
+        <br>For more on how I may help your brand, feel free to <a href="mailto:edwinfcau@gmail.com">
+      <span style="text-decoration: underline; color: blue;">give me a shout</span></a>.</p>
     </td>
 
     <td class="threebythreegrid" style="width: 125px; height: 125px; overflow: visible;">
@@ -173,15 +176,14 @@
               <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
               &nbsp;<a href="https://www.blakes.com" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Blakes.com</a></p>
           </span>
-        <img alt="Carousel Bootstrap Third" src="images/blakes-gradient.jpg" class="portfolio_images oneflowtwo" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
-        <img alt="Carousel Bootstrap Third" src="images/blakes-perspective-gradient.jpg" class="portfolio_images twoflowtwo" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
-
+        <img alt="Carousel Bootstrap Third" src="images/blakes-gradient.jpg" class="portfolio_images" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
+        <!--<img alt="Carousel Bootstrap Third" src="images/blakes-perspective-gradient.jpg" class="portfolio_images twoflowtwo" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">-->
       </div>
     </td>
 
 
-    <td class="threebythreegrid" style="background: #00B5E2;  border: 5px solid #ffffff;">
-      <div class="popup15" onclick="myFunction15()">
+    <td class="threebythreegrid" style="background: #ffffff;  border: 5px solid #ffffff;">
+      <!-- <div class="popup15" onclick="myFunction15()">
         <span class="popuptext15" id="myPopup15">
           <span class="portfolionexttwo popupfour" onclick="myFunctionfour()">&#5176;</span>
           <span class="portfolionexttwo popup14" onclick="myFunction14()">&#5171;</span>
@@ -203,6 +205,24 @@
           </p>
           </span>
           <img alt="Carousel Bootstrap Third" src="images/BLG-Beyond-Rocket-Gif.gif" class="portfolio_images" text-align="center" style="left: -50%; display: block; margin-left: auto; margin-right: auto; opacity: 0.9; transform: scale(3.95); left: -50%; position: relative; padding-bottom: 32%; padding-left: 5%;">
+        </div>-->
+        <div class="popupfive" onclick="myFunctionfive()">
+          <span class="popuptextfive" id="myPopupfive">
+            <span class="portfolionexttwo popup14" onclick="myFunction14()">&#5176;</span>
+            <span class="portfolionexttwo popupsix" onclick="myFunctionsix()">&#5171;</span>
+            <span class="close-btn-xy">&#10540;</span>
+            <div class="click-zoom">
+              <label>
+                <input type="checkbox">
+            <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images_pop">
+          </label>
+        </div>
+              <p class="titleforpopup">2018 | Blakes Event eVite Design &mdash;<span style="font-style: italic;">A Conversation with Margaret Atwood</span></p>
+              <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
+              <p class="textforpopup">Event eVite design &mdash; includes front page and registration form.</p>
+
+            </span>
+          <img alt="Edwin's portfolio Margaret Atwood" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images" text-align="center" style=" overflow: hidden; display: block; margin-left: auto; margin-right: auto; position: relative; transform: scale(2.5); opacity: 1; padding-left:15%;">
         </div>
       </td>
   </tr>
@@ -211,11 +231,11 @@
 <!--BLG Section 2 columns 50/50-->
 
 
-<table class="threecoloumntables">
+<!-- <table class="threecoloumntables">
   <tr>
 
     <td class="threebythreegrid" style="background: #ffffff;  border: 5px solid #ffffff;">
-      <div class="popup14" onclick="myFunction14()">
+  <div class="popup14" onclick="myFunction14()">
         <span class="popuptext14" id="myPopup14">
           <span class="portfolionexttwo popup15" onclick="myFunction15()">&#5176;</span>
           <span class="portfolionexttwo popupfive" onclick="myFunctionfive()">&#5171;</span>
@@ -261,7 +281,7 @@
   </div>
 </td>
   </tr>
-</table>
+</table> -->
 
 <!--BLG Section 3 columns-->
 
@@ -326,7 +346,7 @@
     </div>
         <p class="titleforpopup">2013 - 2016 | Associate, Product Approval &mdash; Disney Consumer Products</p>
         <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-        <p class="textforpopup">Provided creative guidance in the design and development of Disney consumer softlines and hardlines products sold across Walmart Canada, Target Canada, Canadian Tire, Toy R' Us Canada and Dollarama. Working with the team in leading 100+ licensees simultaneously on 500+ products seasonally.<br>
+        <p class="textforpopup">Being able to say that I worked for Disney US and Disney Canada for two and a half years was a pleasure is an understatement!  It was an honour to work with the team and some of the most I Provided creative guidance in the design and development of Disney consumer softlines and hardlines products sold across Walmart Canada, Target Canada, Canadian Tire, Toy R' Us Canada and Dollarama. Working with the team in leading 100+ licensees simultaneously on 500+ products seasonally.<br>
         <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
         &nbsp;<a href="https://disneyconnect.com/dpep/consumer-products" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Disney Consumer Products</a>
         </p>
