sending love and upgrade paragraph to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link href="stylesheet/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Oswald|Lato|Raleway|Cabin+Sketch|Pacifico" rel="stylesheet">
     <link href="stylesheet/reset.css" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+    <link href="stylesheet/font-awesome.min.css" rel="stylesheet" >
     <link href="stylesheet/marbWhite_portfolio.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/nut.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/quote.css" type="text/css" rel="stylesheet">
@@ -48,13 +48,12 @@
     <td style="width: 700px; vertical-align: top;">
       <p class="resume-prompt"><span style="color: #666666; font-size: 13pt; line-height: .9;">
         <a href="https://edwinau.github.io/edwin-landing/index.html" style="color: black; text-decoration: none;" target="_blank">
-          Welcome to my portfolio page
-        </a>
-      </span><br><br>
-        If a picture is worth more than a thousand words, then an amazing 'product experience' is worth a million!  It should leave the user feeling content and satisfied.</br>
-        Thanks for visiting to page - feel free to come back anytime.<br>
-        <br>For more on how I may help your brand, feel free to <a href="mailto:edwinfcau@gmail.com">
-      <span style="text-decoration: underline; color: blue;">give me a shout</span></a>.</p>
+          Thanks for visiting my portfolio page&nbsp;&nbsp;<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%;"></i></a>
+      </span><br>
+      <i class="fa fa-envelope" aria-hidden="true" style="margin-top: 3%;"></i>
+
+<a href="mailto:edwinfcau@gmail.com">
+      <span style="text-decoration: underline; color: blue;">I'd love to hear from you</span></a>.</p>
     </td>
 
     <td class="threebythreegrid" style="width: 125px; height: 125px; overflow: visible;">
