--- a/index.html
+++ b/index.html
@@ -186,21 +186,22 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
     </div>
 
  <!-- contact page -->
-
+<!--
 <div class="container_one contactpage" id="concon">
 	  <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
 
+<!--
   <img src="images/city_contact.png" class="img_contact" alt="city">
     <div class="container_two contact">
       <div class="container_contacts">
         <h4 class="email"><a href="mailto:edwinfcau@gmail.com" class="email">edwinfcau@gmail.com</a></h4>
 
-        <h4 class="linkedin" title="Click to view LinkedIn"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4>
+        <h4 class="linkedin" title="Click to view LinkedIn"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4>-->
        <!-- <h4 class="facebook" title="Click to view Facebook"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4> -->
-        <h4 class="instagram" title="+14168803791"><a href="tel:+14168803791" title="+14168803791" id="contactme"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></a></h4>
+      <!--  <h4 class="instagram" title="+14168803791"><a href="tel:+14168803791" title="+14168803791" id="contactme"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></a></h4>
       </div>
     </div>
-</div>
+</div>-->
 
 
 
