Changes to wording of blakes.com

--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
           </div>
           <p class="titleforpopup">2020 | Visual and Experience Design &mdash; BLG BEYOND</p>
           <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-          <p class="textforpopup">BLG Beyond were seeking new product pages that animate and demonstrate innovation for the newly launched suite of alternative legal services.  The results were a collection of product pages with impactful dynamic motion banners that are attention grabbing and maintain high page&nbsp;load&nbsp;speed.<br>
+          <p class="textforpopup">BLG Beyond were seeking new product pages that animate and demonstrate innovation for the newly launched suite of alternative legal services.  The results were a collection of product pages with impactful dynamic motion banners that are attention grabbing without compromising page&nbsp;load&nbsp;speed.<br>
             <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>&nbsp;<a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG BEYOND</a> and one of it's subsidiaries <a href="https://www.blg.com/en/services/blg-beyond/ip-strategy" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Beyond IP Strategy</a>
           </p>
 		  </span>
@@ -115,7 +115,7 @@
       </div>
       <p class="titleforpopup">2022 | Visual Design &mdash; BLG Merchandise Store</p>
       <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-      <p class="textforpopup">Visual design for client and staff portal - BLG Merchandise Store.<br>
+      <p class="textforpopup">Provided mockups and design feedback for BLG Merchandise Store.<br>
         <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>&nbsp;<a href="https://www.blacksheepshop.net/blg/" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG Merchandise Store</a></p></span>
     <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images oneflowtwo" text-align="center" style="display: block; margin: auto; transform: scale(1.2);">
     <img alt="Carousel Bootstrap Third" src="images/blgwebstore-three.jpg" class="portfolio_images twoflowtwo" text-align="center" style="display: block; margin: auto; transform: scale(1.2);">
@@ -163,15 +163,14 @@
         <div class="click-zoom">
           <label>
             <input type="checkbox">
-          <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images_pop blakesfirst">
-          <img alt="Carousel Bootstrap Third" src="images/blakes-1.jpg" class="portfolio_images_pop blakessecond">
-          <img alt="Carousel Bootstrap Third" src="images/blakes-perspective-gradient.jpg" class="portfolio_images_pop blakesthird">
-
+          <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images_pop">
+        <!--<img alt="Carousel Bootstrap Third" src="images/blakes-1.jpg" class="portfolio_images_pop blakessecond">-->
+        <!--<img alt="Carousel Bootstrap Third" src="images/blakes-perspective-gradient.jpg" class="portfolio_images_pop blakesthird">-->
         </label>
       </div>
-            <p class="titleforpopup">2017-2020 | Blakes.com Web Product Launch</p>
+            <p class="titleforpopup">2017-2020 | Launch of Blakes.com</p>
             <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-            <p class="textforpopup">Digital design for the launch of blakes.com - creation and integration of 50+ legal practice product pages and 700+ lawyer profile pages.  Visual design and&nbsp;UX&nbsp;UI experience.<br>
+            <p class="textforpopup">Providing mockups and visual assets for the launch of blakes.com<br>
               <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
               &nbsp;<a href="https://www.blakes.com" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Blakes.com</a></p>
           </span>
