--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <ul class="menu__box">
             <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#resume_movement">About me</a></li>
             <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio.html">Portfolio</a></li>
-            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#concon">Contact me</a></li>
+            <li><a class="menu__item" href="#concon">Contact me</a></li>
           </ul>
     </div>
 
@@ -66,7 +66,7 @@
           <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
 		  <h2 class="center button-row"><a href="portfolio.html" title="PORTFOLIO"></a></h2>
         <!--  <h2 class="right button-row"><a href="#rendezlogo" target="" title="RendezYou"></a></h2> -->
-          <h2 class="right_right button-row"><a href="#" title="CONTACT"></a></h2>
+          <h2 class="right_right button-row"><a href="#concon" title="CONTACT"></a></h2>
         </div>
       </div>
 
@@ -177,7 +177,7 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
     				<div id="labtopresumewidth" style="overflow: visible;">
 						<p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 17pt; font-weight: bold; line-height: 1.25; opacity: 1; margin: auto; top: -7vh; margin-top: 2%; margin-bottom:1%; text-align: center;">Who I am and what I do&nbsp;
               <i class="fa fa-barcode" aria-hidden="true" style="margin-top: 3%;"></i>
-            <br><span style="font-size:10pt">Click on resume to download PDF.</span></p>
+            <br><span style="font-size:10pt">Click on resume to download PDF</span></p>
 						<div class="forcvportwork" style="margin-left:auto; margin-right: auto; position: relative;"><a href="EDWIN AU.pdf" target="_blank">
               <img id="resume_movement" class="resume_pdf" src="EDWIN AU.jpg" alt="resume" title="Click to download PDF" ></a>
 						</div>
@@ -186,48 +186,21 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
     </div>
 
  <!-- contact page -->
-<!--
 <div class="container_one contactpage" id="concon">
-	  <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
+	 <body background="images/marbleBlack.jpg" class="img_img">
 
-<!--
+
   <img src="images/city_contact.png" class="img_contact" alt="city">
     <div class="container_two contact">
       <div class="container_contacts">
         <h4 class="email"><a href="mailto:edwinfcau@gmail.com" class="email">edwinfcau@gmail.com</a></h4>
 
-        <h4 class="linkedin" title="Click to view LinkedIn"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4>-->
-       <!-- <h4 class="facebook" title="Click to view Facebook"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4> -->
-      <!--  <h4 class="instagram" title="+14168803791"><a href="tel:+14168803791" title="+14168803791" id="contactme"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></a></h4>
-      </div>
-    </div>
-</div>-->
-
-
-
-<!--<div class="container_one contactpage imac displaynone" id="concontwo" style="background: red;
-  background: -webkit-linear-gradient(white, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(white, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(white, #33273d, #003c5f); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(white, #33273d, #003c5f); /* Standard syntax */
-  ">
-  <img src="images/city_contact.png" class="img_contact" alt="city">
-    <div class="container_two contact">
-      <div class="container_contacts">
-        <h4 class="email"><a href="mailto:edwinfcau@gmail.com" class="email">edwinfcau@gmail.com</a></h4>
-      <br class="imac displaynone"><br class="imac displaynone">
-      <br class="imac displaynone"><br class="imac displaynone">
         <h4 class="linkedin" title="Click to view LinkedIn"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4>
-      <br class="imac displaynone"><br class="imac displaynone">-->
        <!-- <h4 class="facebook" title="Click to view Facebook"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4> -->
-    <!--  <br class="imac displaynone"><br class="imac displaynone">
-        <h4 class="instagram" title="+14168803791"><a href="tel:+14168803791" title="+14168803791" id="contactmetwo"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></a></h4>
-      <br class="imac displaynone"><br class="imac displaynone">
+       <h4 class="instagram" title="+14168803791"><a href="tel:+14168803791" title="+14168803791" id="contactme"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></a></h4>
       </div>
     </div>
-</div>-->
-
-
+</div>
 
 
 <!-- <div class="totop"><a href="#backtotop" target="" title="top"><i class="fa fa-angle-double-up"></i>top</a></div> -->
