--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <ul class="menu__box">
             <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#resume_movement">About me</a></li>
             <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio.html">Portfolio</a></li>
-            <li><a class="menu__item" href="#concon">Contact me</a></li>
+            <li><a class="menu__item" href="#contact">Contact me</a></li>
           </ul>
     </div>
 
@@ -66,7 +66,7 @@
           <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
 		  <h2 class="center button-row"><a href="portfolio.html" title="PORTFOLIO"></a></h2>
         <!--  <h2 class="right button-row"><a href="#rendezlogo" target="" title="RendezYou"></a></h2> -->
-          <h2 class="right_right button-row"><a href="#concon" title="CONTACT"></a></h2>
+          <h2 class="right_right button-row"><a href="#contact" title="CONTACT"></a></h2>
         </div>
       </div>
 
@@ -186,7 +186,7 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
     </div>
 
  <!-- contact page -->
-<div class="container_one contactpage" id="concon">
+<div class="container_one contactpage" id="contact">
 	 <body background="images/marbleBlack.jpg" class="img_img">
 
 
