--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
           Thanks for visiting my portfolio page&nbsp;&nbsp;<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%;"></i>
         <!-- </a> -->
       </span><br>
-      If a picture is worth a thousand words, then I hope this brings you a million.  New contents are continually added here so feel free to visit again.<br>
+      If a picture is worth a thousand words, then I hope this brings you a million.  My portfolio is continually updated with new content, so feel free to visit again.<br>
       <i class="fa fa-envelope" aria-hidden="true" style="margin-top: 3%;"></i>
 
 <a href="mailto:edwinfcau@gmail.com">
@@ -615,7 +615,7 @@
 
   <p class="resume-prompt"><span style="color: #333333; font-size: 13pt; line-height: .9;">
     <!-- <a href="https://edwinau.github.io/edwin-landing/index.html" style="color: black; text-decoration: none;" target="_blank"> -->
-      Thanks for visiting! Please <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach out</a> if you have any inquiries <i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%;"></i></p><br>
+      Thanks for visiting! Please <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach out</a> for any inquiries <i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%;"></i></p><br>
     </td>
   </tr>
 </table>
