--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
           Thanks for visiting my portfolio page&nbsp;&nbsp;<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%;"></i>
         <!-- </a> -->
       </span><br>
-      If a picture is worth a thousand words, then I hope this brings you a million.  My portfolio is continually updated with new content, so feel free to visit again.<br>
+      If a picture is worth a thousand words, then I hope this brings you a million.  I'm continually updating this website with more past and new portfolio work, so feel free to visit again.<br>
       <i class="fa fa-envelope" aria-hidden="true" style="margin-top: 3%;"></i>
 
 <a href="mailto:edwinfcau@gmail.com">
