--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
 
           <ul class="menu__box">
             <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#resume_movement">About me</a></li>
-            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#concon"> Contact me</a></li>
+            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#contact"> Contact me</a></li>
             <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html">Home</a></li>
           </ul>
       </div>
