rejig Dolce Gabbana work experience

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
           Thanks for visiting my portfolio page&nbsp;&nbsp;<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%;"></i>
       </span></p>
       <p class="resume-prompt">
-        In recent years - over a pandemic and the drastic advancement of AI technology, so much has changed in designing for the digital space, whether it’s for apps, web or social media.</p>
+        In recent years - over a pandemic and the drastic advancement of AI technology, so much has changed in designing for the digital space, whether for apps, web or social media platforms.</p>
     </td>
 
     <td class="threebythreegrid" style="width: 125px; height: 125px; overflow: visible;">
@@ -217,7 +217,8 @@
 <table class="threecoloumntables">
 <tr>
   <td class="threebythreegrid" colspan="3" style="border: 5px solid #ffffff;"><br>
-    <p class="resume-prompt">Recognizing the intrinsic connection between content, design, and user experience (UX/UI), I leverage AI tools and strategic engineering to elevate design solutions. Grounded in a foundation of critical design thinking and informed by meticulous research and the development of user personas, I strive to craft digital experiences that seamlessly blend aesthetics with functionality, leaving a lasting impact.</p>
+    <p class="resume-prompt">In understanding the intrisic relationship between how content and design correlates with UX/UI, I use AI and prompt engineering tools to enhance designs.  I apply critical design thinking with research and ‘personas’ mindset to create harmonious and impactful digital products.
+</p>
   </td>
 </tr>
 </table>
@@ -430,8 +431,9 @@
 
 <table class="threecoloumntables">
 <tr>
-  <td class="threebythreegrid" colspan="3" style="border: 5px solid #ffffff;"><br>
-    <p class="resume-prompt">Pior to becoming a digital designer, I have a background in consumer product design with a focus on fashion design.  I've worked for brands like Disney Canada in the Toronto office (with travel to Disney Glendale L.A. office), to working as an associate for Dolce & Gabbana in Milan, Italy.</p>
+  <td class="threebythreegrid" colspan="3">
+    <p class="resume-prompt">
+      Pior to becoming a digital designer, I have a background in consumer product design and fashion design. &nbsp;I've worked for brands like Disney in the Canadian office, to Dolce & Gabbana while living in Milan, Italy.</p>
   </td>
 </tr>
 </table>
@@ -567,9 +569,9 @@
           <img alt="Carousel Bootstrap Third" src="images/DG2022.jpg" class="portfolio_images_pop">
         </label>
       </div>
-            <p class="titleforpopup">Feb - September 2013 | Associate &mdash; Dolce &amp; Gabbana &mdash; Milan office</p>
+            <p class="titleforpopup">2013 | Associate | Dolce &amp; Gabbana, Milan office</p>
             <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-            <p class="textforpopup">Brought 10 years of fashion design experience to Italy and resulted in a work opportunity for Dolce &amp; Gabbana in Milan; Preparation and assistance with the team on Fall 2013 and Spring 2014 RTW collections.</p>
+            <p class="textforpopup">Brought 10 years of design experience to Italy and resulted in a work opportunity for Dolce &amp; Gabbana in Milan; Preparation and assistance with the team on Fall 2013 and Spring 2014 RTW collections.</p>
           </span>
         <img alt="Carousel Bootstrap Third" src="images/DG2022-gradient.jpg" class="portfolio_images oneflowtwo" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 0.7;">
         <img alt="Carousel Bootstrap Third" src="images/DG-logo-invert.jpg" class="portfolio_images twoflowtwo" style"filter: invert(100%); -webkit-filter: invert(100%);" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 1;">
