--- a/portfolio.html
+++ b/portfolio.html
@@ -433,7 +433,7 @@
 <tr>
   <td class="threebythreegrid" colspan="3">
     <p class="resume-prompt">
-      Pior to becoming a digital designer, I have a background in consumer product design and fashion design. &nbsp;I've worked for brands like Disney in the Canadian office, to Dolce & Gabbana while living in Milan, Italy.</p>
+      Prior to digital design, I have a background in consumer product design and fashion design.</p>
   </td>
 </tr>
 </table>
