new intrinsic blurb

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
           Thanks for visiting my portfolio page&nbsp;&nbsp;<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%;"></i>
       </span></p>
       <p class="resume-prompt">
-        In recent years - over a pandemic and the drastic advancement of AI technology, so much has changed in designing for the digital space, whether for apps, web or social media platforms.</p>
+        In recent years - over a pandemic and the drastic advancement of AI technology, so much has changed in the digital space - whether on apps, web or social media platforms.</p>
     </td>
 
     <td class="threebythreegrid" style="width: 125px; height: 125px; overflow: visible;">
@@ -97,7 +97,7 @@
           </div>
           <p class="titleforpopup">2020 | BLG BEYOND landing pages</p>
           <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-          <p class="textforpopup">Design and curation of digital visuals and digital products for BLG Beyond &mdash; an alternative suite of legal services by BLG; including and not limited to concepts, wireframes to digital assets.<br>
+          <p class="textforpopup">Design and curation of digital visuals and digital products for BLG Beyond &mdash; an alternative suite of legal services by BLG; including and not limited to concepts, wireframes and digital assets.<br>
             <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>&nbsp;<a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG BEYOND</a> and one of it's subsidiaries <a href="https://www.blg.com/en/services/blg-beyond/ip-strategy" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Beyond IP Strategy</a>
           </p>
 		  </span>
