--- a/portfolio.html
+++ b/portfolio.html
@@ -48,10 +48,14 @@
 
     <td style="width: 700px; vertical-align: top;">
       <p class="resume-prompt"><span style="color: #333333; font-size: 13pt; line-height: .9;">
-          Thanks for visiting my portfolio page&nbsp;&nbsp;<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%;"></i>
+          Thanks for visiting my portfolio&nbsp;&nbsp;<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%;"></i>
       </span></p>
       <p class="resume-prompt">
-        In recent years - over a pandemic and the drastic advancement of AI technology, so much has changed in the digital space - whether on apps, web or social media platforms.</p>
+        In recent years - over a pandemic and the drastic advancement of AI technology, so much has changed in&nbsp;the digital space - whether on apps, web or social media&nbsp;platforms.</p>
+        <p class="resume-prompt">I understanding the relationship between design and content and how it correlates with experience (UX/UI). I&nbsp;can&nbsp;use AI and prompt engineering tools to further enhance designs (should we choose).
+        </p>
+        <p class="resume-prompt"><span style="color: orangered;">Click on images for details.</span>
+        </p>
     </td>
 
     <td class="threebythreegrid" style="width: 125px; height: 125px; overflow: visible;">
@@ -158,8 +162,6 @@
 
 <table class="threecoloumntables">
   <tr>
-
-
     <td class="threebythreegrid" style="border: 5px solid #ffffff;">
       <div class="popup4" onclick="myFunction4()">
         <span class="popuptext4" id="myPopup4">
@@ -217,8 +219,8 @@
 <table class="threecoloumntables">
 <tr>
   <td class="threebythreegrid" colspan="3" style="border: 5px solid #ffffff;"><br>
-    <p class="resume-prompt">In understanding the intrisic relationship between how content and design correlates with UX/UI, I use AI and prompt engineering tools to enhance designs.  I apply critical design thinking with research and ‘personas’ mindset to create harmonious and impactful digital products.
-</p>
+    <p class="resume-prompt">
+       I apply critical design thinking with research and ‘personas’ mindset to create harmonious and impactful digital products.</p>
   </td>
 </tr>
 </table>
@@ -439,6 +441,8 @@
 </table>
 
 
+
+
 <!-- new section for Thinkway -->
 <table class="threecoloumntables">
   <tr>
@@ -475,6 +479,16 @@
 </td>
 
   </tr>
+</table>
+
+
+<table class="threecoloumntables">
+<tr>
+  <td class="threebythreegrid" colspan="3" style="border: 5px solid #ffffff;"><br>
+    <p class="resume-prompt">
+      I worked with Disney Canada,</p>
+  </td>
+</tr>
 </table>
 
 
@@ -547,6 +561,20 @@
 </table>
 
 <!--BLG Section 3 columns Star Wars -->
+
+
+
+<table class="threecoloumntables">
+<tr>
+  <td class="threebythreegrid" colspan="3" style="border: 5px solid #ffffff;"><br>
+    <p class="resume-prompt">
+      and Dolce & Gabbana in Milan</p>
+  </td>
+</tr>
+</table>
+
+
+
 
 <table class="threecoloumntables">
 
@@ -626,7 +654,8 @@
 
       </span><br>
       <p class="resume-prompt">
-      I'm continually updating here with more past and new portfolio projects, so feel free to visit again or <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach out</a> to me should there be inquiries <i class="fa fa-comment-o" aria-hidden="true" style="margin-top: 3%;"></i><br><br></p>
+      This is continually updated with past and present portfolio experiences. Feel&nbsp;free to visit again or <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach out</a> to me should you have any inquiries <i class="fa fa-comment-o" aria-hidden="true" style="margin-top: 3%;"></i><br><br>
+      ~ Thanks again for visiting <i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%;"></i></span><br><br></p>
     </td>
   </tr>
 </table>
@@ -820,7 +849,8 @@
         <h4 class="email"><a href="mailto:edwinfcau@gmail.com" class="email ">edwinfcau@gmail.com</a></h4>
 		  <br class="imac displaynone"><br class="imac displaynone">
 		  <br class="imac displaynone"><br class="imac displaynone">
-        <h4 class="linkedin" title="Click to view LinkedIn"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4>
+        <h4 class="linkedin" title="Click to view LinkedIn"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">
+          <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4>
 		  <br class="imac displaynone"><br class="imac displaynone">
        <!-- <h4 class="facebook" title="Click to view facebook (Currently Inactive)"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4> -->
 		  <br class="imac displaynone"><br class="imac displaynone">
