committing to better verbage

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,10 +52,9 @@
       </span></p>
       <p class="resume-prompt">
         In recent years - over a pandemic and the drastic advancement of AI technology, so much has changed in&nbsp;the digital space - whether on apps, web or social media&nbsp;platforms.</p>
-        <p class="resume-prompt">I understanding the relationship between design and content and how it correlates with experience (UX/UI). I&nbsp;can&nbsp;use AI and prompt engineering tools to further enhance designs (should we choose).
+        <p class="resume-prompt">I understanding the relationship between how design and content and correlates with experience (UX/UI). I have knowledge in using AI and prompt engineering tools to enhance designs.
         </p>
-        <p class="resume-prompt"><span style="color: orangered;">Click on images for details.</span>
-        </p>
+
     </td>
 
     <td class="threebythreegrid" style="width: 125px; height: 125px; overflow: visible;">
@@ -77,6 +76,8 @@
     <td colspan="3">
       <p style="background: linear-gradient(45deg, #a7a6ba, #516395,  #516395, #516395, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">
       2020 - 2024 | BLG LLP (Borden Ladner Gervais LLP) </p>
+      <p class="resume-prompt"><span style="color: orangered;">Click on images for details.</span>
+      </p>
     </td>
   </tr>
 
