design thinking for designs

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,8 +51,8 @@
           Thanks for visiting my portfolio&nbsp;&nbsp;<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%;"></i>
       </span></p>
       <p class="resume-prompt">
-        In recent years - over a pandemic and the drastic advancement of AI technology, so much has changed in&nbsp;the digital space - whether on apps, web or social media&nbsp;platforms.</p>
-        <p class="resume-prompt">I understanding the relationship between how design and content and correlates with experience (UX/UI). I have knowledge in using AI and prompt engineering tools to enhance designs.
+        In recent years - over a pandemic and the drastic advancement of AI technology, so much has changed in&nbsp;the digital space - whether designing for apps, web or social media&nbsp;platforms.</p>
+        <p class="resume-prompt">I understanding the relationship between how design and content and correlates with experience (UX/UI). I have knowledge in using AI and prompt engineering tools to enhance designs, or enhance design thinking for designs.
         </p>
 
     </td>
@@ -435,8 +435,7 @@
 <table class="threecoloumntables">
 <tr>
   <td class="threebythreegrid" colspan="3">
-    <p class="resume-prompt">
-      Prior to digital design, I have a background in consumer product design and fashion design.</p>
+
   </td>
 </tr>
 </table>
@@ -487,7 +486,8 @@
 <tr>
   <td class="threebythreegrid" colspan="3" style="border: 5px solid #ffffff;"><br>
     <p class="resume-prompt">
-      I worked with Disney Canada,</p>
+      Prior to digital design, I have a background in consumer product design and fashion design.</p>
+
   </td>
 </tr>
 </table>
@@ -569,7 +569,7 @@
 <tr>
   <td class="threebythreegrid" colspan="3" style="border: 5px solid #ffffff;"><br>
     <p class="resume-prompt">
-      and Dolce & Gabbana in Milan</p>
+      I was with Disney Canada for two and half years. We traveled to Disney Glendale regularly to work with the US team and the remaining time we met with licensees here in Canada and managed the online product approval process. One of my proudest moments was when my design got chosen to be sold at UNIQLO.</p>
   </td>
 </tr>
 </table>
@@ -654,6 +654,8 @@
     <td style="width: 700px; vertical-align: top;" colspan="3">
 
       </span><br>
+      <p class="resume-prompt">
+        I've also worked for Dolce & Gabbana while living in Milan upon bringing my design skills aboard.</p>
       <p class="resume-prompt">
       This is continually updated with past and present portfolio experiences. Feel&nbsp;free to visit again or <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach out</a> to me should you have any inquiries <i class="fa fa-comment-o" aria-hidden="true" style="margin-top: 3%;"></i><br><br>
       ~ Thanks again for visiting <i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%;"></i></span><br><br></p>
